force-app/main/default/objects/Census_Schedule__c/Census_Schedule__c.object-meta.xml
<CustomObject>
    <label>Schedule</label>
    <nameField>
        <label>Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>