force-app/main/default/objects/Census_Schedule__c/fields/Base_for_Rate_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Base_for_Rate_Calculation__c</fullName>
    <label>Base for Rate Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>