force-app/main/default/objects/Census_Schedule__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Census_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>