force-app/main/default/objects/Census_Schedule__c/fields/Carrier_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Name__c</fullName>
    <formula>Insurance_Policy__r.Carrier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Name</label>
    <type>Text</type>
</CustomField>