force-app/main/default/objects/Census_Schedule__c/fields/Experience_Rating_Modifier__c.field-meta.xml
<CustomField>
    <fullName>Experience_Rating_Modifier__c</fullName>
    <formula>Insurance_Policy__r.Experience_Rating_Modifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Experience Rating Modifier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>