force-app/main/default/objects/Census_Schedule__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <label>Insurance Policy</label>
    <referenceTo>Insurance_Policy__c</referenceTo>
    <relationshipLabel>Schedule</relationshipLabel>
    <relationshipName>Census_Schedule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>