force-app/main/default/objects/Census_Schedule__c/fields/Insured_Contact__c.field-meta.xml
<CustomField>
    <fullName>Insured_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insured Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Census_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>