force-app/main/default/objects/Census_Schedule__c/fields/Insured_Name__c.field-meta.xml
<CustomField>
    <fullName>Insured_Name__c</fullName>
    <formula>Insurance_Policy__r.Named_Insured__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Name</label>
    <type>Text</type>
</CustomField>