force-app/main/default/objects/Census_Schedule__c/fields/Location_Adjustment_Factor__c.field-meta.xml
<CustomField>
    <fullName>Location_Adjustment_Factor__c</fullName>
    <formula>IF(Location_Factors__r.index__c=0, 1, Location_Factors__r.index__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Adjustment Factor</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>