force-app/main/default/objects/Census_Schedule__c/fields/Location_Factors__c.field-meta.xml
<CustomField>
    <fullName>Location_Factors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Factors</label>
    <referenceTo>Factors__c</referenceTo>
    <relationshipName>Census_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>