force-app/main/default/objects/Census_Schedule__c/fields/Loss_Rate__c.field-meta.xml
<CustomField>
    <fullName>Loss_Rate__c</fullName>
    <label>Loss Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>