force-app/main/default/objects/Census_Schedule__c/fields/Major_Class__c.field-meta.xml
<CustomField>
    <fullName>Major_Class__c</fullName>
    <label>Major Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Major_Class</valueSetName>
    </valueSet>
</CustomField>