force-app/main/default/objects/Census_Schedule__c/fields/NCCI_Code__c.field-meta.xml
<CustomField>
    <fullName>NCCI_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCCI Code</label>
    <referenceTo>NCCI_Code__c</referenceTo>
    <relationshipName>Census_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>