force-app/main/default/objects/Census_Schedule__c/fields/NCCI_Company_LCM__c.field-meta.xml
<CustomField>
    <fullName>NCCI_Company_LCM__c</fullName>
    <formula>NCCI_Code__r.Experience_Modifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCCI Company LCM</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>