force-app/main/default/objects/Census_Schedule__c/fields/NCCI_Description__c.field-meta.xml
<CustomField>
    <fullName>NCCI_Description__c</fullName>
    <formula>NCCI_Code__r.NCCI_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCCI Description</label>
    <type>Text</type>
</CustomField>