force-app/main/default/objects/Census_Schedule__c/fields/NCCI_Exposure_Base__c.field-meta.xml
<CustomField>
    <fullName>NCCI_Exposure_Base__c</fullName>
    <formula>text( NCCI_Code__r.Exposure_Base__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCCI Exposure Base</label>
    <type>Text</type>
</CustomField>