force-app/main/default/objects/Census_Schedule__c/fields/NCCI_Rate__c.field-meta.xml
<CustomField>
    <fullName>NCCI_Rate__c</fullName>
    <formula>NCCI_Code__r.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCCI Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>