force-app/main/default/objects/Census_Schedule__c/fields/Policy_Base_for_Rate_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Policy_Base_for_Rate_Calculation__c</fullName>
    <formula>Insurance_Policy__r.Base_for_rate_calculation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Base for Rate Calculation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>