force-app/main/default/objects/Census_Schedule__c/fields/Policy_Premium__c.field-meta.xml
<CustomField>
    <fullName>Policy_Premium__c</fullName>
    <formula>Premiums__c +  Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>