force-app/main/default/objects/Census_Schedule__c/fields/Premiums__c.field-meta.xml
<CustomField>
    <fullName>Premiums__c</fullName>
    <label>Premiums</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>