force-app/main/default/objects/Census_Schedule__c/fields/Producer__c.field-meta.xml
<CustomField>
    <fullName>Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Census_Schedule1</relationshipName>
    <type>Lookup</type>
</CustomField>