force-app/main/default/objects/Census_Schedule__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <formula>(NCCI_Rate__c  *  Base_for_Rate_Calculation__c   )  *  NCCI_Company_LCM__c *  Location_Adjustment_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The NCCI rate * Exposures* adjustment factors</inlineHelpText>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>