force-app/main/default/objects/Census_Schedule__c/fields/START_Rating_Product__c.field-meta.xml
<CustomField>
    <fullName>START_Rating_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>START Rating Product</label>
    <referenceTo>START_Rating_Tool__c</referenceTo>
    <relationshipName>Census_Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>