force-app/main/default/objects/Census_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Insurance_Policy__c</columns>
    <columns>NCCI_Code__c</columns>
    <columns>NCCI_Description__c</columns>
    <columns>Insured_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>