force-app/main/default/objects/Census_Schedule__c/listViews/Start_Base_Premiums.listView-meta.xml
<ListView>
    <fullName>Start_Base_Premiums</fullName>
    <columns>NAME</columns>
    <columns>Premiums__c</columns>
    <columns>Rate__c</columns>
    <columns>Subject_Premium_Base__c</columns>
    <filterScope>Mine</filterScope>
    <label>Start Base Premiums</label>
</ListView>